--- a/CV_ManagementSystem/Reports/ReportFullTemp_4.rdlc
+++ b/CV_ManagementSystem/Reports/ReportFullTemp_4.rdlc
@@ -1685,6 +1685,7 @@
                           <TextRuns>
                             <TextRun>
                               <Value>=Fields!JobDescription.Value</Value>
+                              <MarkupType>HTML</MarkupType>
                               <Style>
                                 <FontFamily>Trebuchet MS</FontFamily>
                               </Style>
