--- a/CV_ManagementSystem/Reports/ReportFullTemp.rdlc
+++ b/CV_ManagementSystem/Reports/ReportFullTemp.rdlc
@@ -586,7 +586,7 @@
             </TablixRowHierarchy>
             <DataSetName>Personal_Info</DataSetName>
             <Top>3.90878cm</Top>
-            <Left>0.36513cm</Left>
+            <Left>0.33867cm</Left>
             <Height>2.14826cm</Height>
             <Width>6.52165cm</Width>
             <Style>
@@ -614,8 +614,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox2</rd:DefaultName>
-            <Top>6.12987cm</Top>
-            <Left>0.36513cm</Left>
+            <Top>7.39987cm</Top>
+            <Left>0.33867cm</Left>
             <Height>0.6cm</Height>
             <Width>6.38964cm</Width>
             <ZIndex>1</ZIndex>
@@ -633,10 +633,10 @@
             <Source>Database</Source>
             <Value>=First(Fields!Photo_Data.Value, "Personal_Info")</Value>
             <MIMEType>image/png</MIMEType>
-            <Top>0cm</Top>
-            <Left>0.68868cm</Left>
-            <Height>3.52592cm</Height>
-            <Width>5.87253cm</Width>
+            <Top>0.07056cm</Top>
+            <Left>0.82097cm</Left>
+            <Height>3.66703cm</Height>
+            <Width>5.71378cm</Width>
             <ZIndex>2</ZIndex>
             <Style>
               <Border>
@@ -713,8 +713,8 @@
               </Textbox>
             </ReportItems>
             <KeepTogether>true</KeepTogether>
-            <Top>16.63382cm</Top>
-            <Left>0.31222cm</Left>
+            <Top>15.99882cm</Top>
+            <Left>0.28576cm</Left>
             <Height>3.38869cm</Height>
             <Width>6.53604cm</Width>
             <ZIndex>3</ZIndex>
@@ -798,8 +798,8 @@
               </Textbox>
             </ReportItems>
             <KeepTogether>true</KeepTogether>
-            <Top>20.1989cm</Top>
-            <Left>0.2827cm</Left>
+            <Top>19.5639cm</Top>
+            <Left>0.25624cm</Left>
             <Height>3.135cm</Height>
             <Width>6.47207cm</Width>
             <ZIndex>4</ZIndex>
@@ -846,7 +846,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Center</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>SkillsTranID</rd:DefaultName>
@@ -854,6 +856,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -878,7 +881,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Left</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>Details1</rd:DefaultName>
@@ -886,6 +891,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -955,7 +961,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Center</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>RowNum</rd:DefaultName>
@@ -963,6 +971,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -987,7 +996,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Left</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>Details1</rd:DefaultName>
@@ -995,6 +1006,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1065,7 +1077,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Center</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>RowNum</rd:DefaultName>
@@ -1073,6 +1087,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1097,7 +1112,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Left</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>Details1</rd:DefaultName>
@@ -1105,6 +1122,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1175,7 +1193,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Center</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>RowNum</rd:DefaultName>
@@ -1183,6 +1203,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1207,7 +1228,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Left</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>Details1</rd:DefaultName>
@@ -1218,6 +1241,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1288,7 +1312,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Center</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>RowNum</rd:DefaultName>
@@ -1296,6 +1322,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1320,7 +1347,9 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style />
+                                  <Style>
+                                    <TextAlign>Left</TextAlign>
+                                  </Style>
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>Details1</rd:DefaultName>
@@ -1328,6 +1357,7 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1375,8 +1405,8 @@
                 </Style>
               </Tablix>
             </ReportItems>
-            <Top>6.90626cm</Top>
-            <Left>0.36513cm</Left>
+            <Top>8.17626cm</Top>
+            <Left>0.33867cm</Left>
             <Height>7.32867cm</Height>
             <Width>6.38964cm</Width>
             <ZIndex>5</ZIndex>
@@ -1389,19 +1419,14 @@
         </ReportItems>
         <KeepTogether>true</KeepTogether>
         <Top>0cm</Top>
-        <Left>13.93068cm</Left>
-        <Height>25.13781cm</Height>
-        <Width>6.99289cm</Width>
+        <Left>13.95714cm</Left>
+        <Height>25.48177cm</Height>
+        <Width>6.9874cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <TopBorder>
-            <Color>White</Color>
-            <Style>Solid</Style>
-            <Width>1.5pt</Width>
-          </TopBorder>
           <BackgroundColor>Black</BackgroundColor>
         </Style>
       </Rectangle>
@@ -2050,7 +2075,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>Experience2</DataSetName>
-        <Top>25.22424cm</Top>
+        <Top>25.54174cm</Top>
         <Left>0.59268cm</Left>
         <Height>2.93854cm</Height>
         <Width>20.12953cm</Width>
@@ -2189,13 +2214,13 @@
         </Style>
       </Line>
     </ReportItems>
-    <Height>28.32454cm</Height>
+    <Height>28.56267cm</Height>
     <Style />
   </Body>
-  <Width>20.92357cm</Width>
+  <Width>20.94454cm</Width>
   <Page>
     <PageHeader>
-      <Height>1.93635cm</Height>
+      <Height>1.7776cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -2203,9 +2228,9 @@
           <Source>Embedded</Source>
           <Value>ECC_2025</Value>
           <Sizing>FitProportional</Sizing>
-          <Top>0.16757cm</Top>
+          <Top>0.14099cm</Top>
           <Left>0.68791cm</Left>
-          <Height>1.76878cm</Height>
+          <Height>1.58357cm</Height>
           <Width>3.89818cm</Width>
           <Style>
             <Border>
@@ -2230,7 +2255,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.30243cm</Top>
+          <Top>0.3076cm</Top>
           <Left>5.01797cm</Left>
           <Height>0.54708cm</Height>
           <Width>1.46285cm</Width>
@@ -2266,7 +2291,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.77014cm</Top>
+          <Top>0.77531cm</Top>
           <Left>5.01797cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2302,7 +2327,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.27826cm</Top>
+          <Top>1.28343cm</Top>
           <Left>5.01797cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2338,7 +2363,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.30243cm</Top>
+          <Top>0.3076cm</Top>
           <Left>6.5161cm</Left>
           <Height>0.54708cm</Height>
           <Width>5.30166cm</Width>
@@ -2374,7 +2399,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.77014cm</Top>
+          <Top>0.77531cm</Top>
           <Left>6.5161cm</Left>
           <Height>0.46771cm</Height>
           <Width>5.30166cm</Width>
@@ -2410,7 +2435,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.27826cm</Top>
+          <Top>1.28343cm</Top>
           <Left>6.5161cm</Left>
           <Height>0.46771cm</Height>
           <Width>5.30166cm</Width>
@@ -2444,8 +2469,8 @@
           </Paragraphs>
           <rd:DefaultName>Textbox24</rd:DefaultName>
           <Top>0cm</Top>
-          <Left>13.93068cm</Left>
-          <Height>1.93635cm</Height>
+          <Left>13.95714cm</Left>
+          <Height>1.7776cm</Height>
           <Width>6.9874cm</Width>
           <ZIndex>7</ZIndex>
           <Visibility>
@@ -2478,7 +2503,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox46</rd:DefaultName>
-          <Top>0.63785cm</Top>
+          <Top>0.29377cm</Top>
           <Left>4.7272cm</Left>
           <Height>0.6cm</Height>
           <Width>16.09026cm</Width>
@@ -2512,7 +2537,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox46</rd:DefaultName>
-          <Top>1.27285cm</Top>
+          <Top>0.92877cm</Top>
           <Left>4.75542cm</Left>
           <Height>0.6cm</Height>
           <Width>16.05498cm</Width>
@@ -2566,7 +2591,7 @@
               </Paragraphs>
               <rd:DefaultName>Textbox47</rd:DefaultName>
               <Top>0.10583cm</Top>
-              <Left>4.09296cm</Left>
+              <Left>4.03475cm</Left>
               <Height>0.57354cm</Height>
               <Width>2.5cm</Width>
               <Style>
@@ -2584,7 +2609,7 @@
           </ReportItems>
           <KeepTogether>true</KeepTogether>
           <Top>0cm</Top>
-          <Left>13.93068cm</Left>
+          <Left>13.95714cm</Left>
           <Height>0.77126cm</Height>
           <Width>6.9874cm</Width>
           <Style>
