--- a/CV_ManagementSystem/Reports/ProjectList.rdlc
+++ b/CV_ManagementSystem/Reports/ProjectList.rdlc
@@ -89,7 +89,7 @@
                                 <TextRun>
                                   <Value>Project</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -122,7 +122,7 @@
                                 <TextRun>
                                   <Value>=Fields!ProjectName.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -160,7 +160,7 @@
                                 <TextRun>
                                   <Value>Position</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -193,7 +193,7 @@
                                 <TextRun>
                                   <Value>=Fields!Position.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -231,7 +231,7 @@
                                 <TextRun>
                                   <Value>Description</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -264,7 +264,7 @@
                                 <TextRun>
                                   <Value>=Fields!Description.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -302,7 +302,7 @@
                                 <TextRun>
                                   <Value>Client</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -335,7 +335,7 @@
                                 <TextRun>
                                   <Value>=Fields!Client.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -373,7 +373,7 @@
                                 <TextRun>
                                   <Value>Contract Price</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -406,7 +406,7 @@
                                 <TextRun>
                                   <Value>=Fields!ContractPrice.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -444,7 +444,7 @@
                                 <TextRun>
                                   <Value>Scope of Work</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -477,7 +477,7 @@
                                 <TextRun>
                                   <Value>=Fields!ScopeOfWork.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -515,7 +515,7 @@
                                 <TextRun>
                                   <Value>Consultant</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -548,7 +548,7 @@
                                 <TextRun>
                                   <Value>=Fields!Consultant.Value</Value>
                                   <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
+                                    <FontFamily>Sofia Pro Regular</FontFamily>
                                     <FontSize>9pt</FontSize>
                                   </Style>
                                 </TextRun>
@@ -729,7 +729,7 @@
                   <TextRun>
                     <Value>PROJECTS</Value>
                     <Style>
-                      <FontFamily>Trebuchet MS</FontFamily>
+                      <FontFamily>Sofia Pro Bold</FontFamily>
                       <FontWeight>Bold</FontWeight>
                     </Style>
                   </TextRun>
